@@ -16,6 +16,8 @@ Feaures:
   as deprecated.
 - New client/server connection establishment API
 - Added CUDA support for stream API
+- Added network only worker addresses, which can be obtained using
+  ucp_worker_query() routine
 
 ## 1.4.0-rc2 (October 23, 2018)
 
